<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_centerHorizontal="true"
    android:background="@drawable/popup_bg"
    android:theme="@style/Base.Theme.AppCompat.Light"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/txtView"
        android:text="@string/add_popup_title"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="@dimen/title_size"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/popupEdtTxtName"
        android:inputType="textPersonName"
        android:background="@drawable/button_bg"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:hint="@string/hint_name"
        android:layout_below="@+id/txtView"
        android:layout_marginTop="8dp"
        android:textColorHint="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/popupEdtTxtPhone"
        android:inputType="phone"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:background="@drawable/button_bg"
        android:layout_below="@id/popupEdtTxtName"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_phoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSave"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:background="@drawable/button_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnCancel"
        android:layout_alignBottom="@+id/btnCancel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:text="@string/btnSave_text" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:background="@drawable/button_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/popupEdtTxtPhone"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:text="@string/btnCancel_text" />

</RelativeLayout>