<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/Base.Theme.AppCompat.Light"
    android:background="@drawable/popup_bg"
    android:layout_centerHorizontal="true"
    android:layout_width="300dp"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/text"
        android:textSize="@dimen/title_size"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:text="@string/delete_popup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_bg"
        android:text="@string/btnNo_text"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnYes"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnNo"
        android:layout_alignBottom="@+id/btnNo"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_bg"
        android:text="@string/btnYes_text"
        android:textColor="@android:color/white" />

</RelativeLayout>